<resources>
    <string name="app_name">TrueCitizenQuiz</string>
    <string name="test_question">My Test Question</string>
    <string name="false_text">False</string>
    <string name="true_text">True</string>
    <string name="correct">That\'s Correct!</string>
    <string name="incorrect">That\'s Incorrect</string>

    <!--creating an array from strings-->
    <string name="independence_question">The U.S. Declaration of Independence was adopted in 1776.</string>
    <string name="traditions_question">A good world citizen needs the ability to think critically about his or her traditions.</string>
    <string name="region_question">Nussbaum believes that good citizens should identify with their local group or region first and foremost.</string>
    <string name="born_citizen_question">Those who are not born in the US cannot become full citizens.</string>
    <string name="puerto_rico_question">People living in Puerto Rico and other US territories are considered US citizens.</string>
    <string name="american_citizen_question">American citizens may expatriate, or voluntarily abandon their citizenship.</string>
    <string name="foreign_citizen_question">A child born on foreign soil whose parents are US citizens that have lived in the US, is automatically a US citizen.</string>
    <string name="immigration_question">While much attention is given to recent attempts to limit immigration to the US, our founders also found ways to push back against immigration.</string>
    <string name="aliens_question">The US currently sets no limit on the number of aliens that may enter the US, as long as those aliens enter legally.</string>
    <string name="illegal_immigrant_question">Once an immigrant enters the US illegally they have no chance of ever becoming a legal resident.</string>
    <string name="illegal_alien_question">It is a crime to knowingly hire an illegal alien.</string>
    <string name="next">Next</string>
    <string name="back">back</string>

</resources>